<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="addNewMovieListViewModel"
            type="com.example.projet.add_new_list.AddNewMovieListViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/linearLayout_add_new_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/add_new_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/list_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={addNewMovieListViewModel.newListName}" />

        <LinearLayout
            android:id="@+id/linearLayout_add_new_list_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> addNewMovieListViewModel.addNewMovieListCancel()}"
                android:text="@string/cancel_button" />

            <Button
                android:id="@+id/button_create"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> addNewMovieListViewModel.addNewMovieList()}"
                android:text="@string/create_button" />
        </LinearLayout>

    </LinearLayout>

</layout>

